--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@remix-run/serve": "^2.7.0",
     "isbot": "^3.6.13",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix-utils": "^7.5.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.7.0",
     "@remix-run/eslint-config": "^2.7.0",
     "@types/node": "20.11.17",
-    "@types/react": "^18.2.55",
+    "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.56.0",
     "typescript": "^5.3.3"
