--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@remix-run/node": "^2.7.2",
     "@remix-run/react": "^2.7.2",
     "@remix-run/serve": "^2.7.2",
+    "isbot": "^4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-utils": "^7.5.0"
